link to jesse-ai/jesse

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": {
     "jesse": "bin/jesse"
   },
-  "repository": "git@github.com/jesse-ai/jesse-cli.git",
+  "repository": "git@github.com/jesse-ai/jesse.git",
   "main": "index.js",
   "scripts": {
     "test": "jest"
