--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "npm": "~5.6.0"
   },
   "author": "Sully Fischer <fischersully@gmail.com>",
-  "license": "AGPL",
+  "license": "AGPL-3.0-or-later",
   "dependencies": {
     "camelcase": "^5.0.0",
     "chalk": "^2.4.2",
