--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ Homestead.yaml
 .DS_Store
 Envoy.blade.php
 /vendor
+/dist
 /.vagrant
 /public/mix-manifest.json
 public/mix-manifest.json
@@ -28,7 +29,6 @@ composer.lock
 _ide_helper_models.php
 _ide_helper.php
 .env.dusk.testing
-dist
 package-lock.json
 .eslintrc.js
 /storage/framework/testing
