--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jesse",
-    "version": "0.1.8",
+    "version": "0.1.9",
     "description": "An advanced cryptocurrency trading framework for TypeScript",
     "author": "Sully Fischer <fischersully@gmail.com>",
     "license": "AGPL-3.0-or-later",
@@ -47,6 +47,8 @@
         "util.promisify": "^1.0.0"
     },
     "devDependencies": {
+        "@types/findup-sync": "^2.0.0",
+        "@types/fs-extra": "^5.0.4",
         "@types/jest": "^22.1.4",
         "@types/node": "^9.4.6",
         "jest": "^22.4.2",
